# Bobot_2_Amethyst

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  compile.sh  devcontainer.json
assets/graphics/: Description.ini
assets/graphics/libraries/: Description.ini
components/asset_uploader/: CMakeLists.txt  asset_uploader.cpp
components/asset_uploader/include/: asset_uploader.hpp
components/audio_player/: CMakeLists.txt  README.md  audio_player.cpp
components/audio_player/include/: audio_player.hpp
components/bmi160/: CMakeLists.txt
components/bmi160/include/: bmi160.hpp
components/bmi160/src/: bmi160.cpp
components/button_driver/: CMakeLists.txt  button_driver.cpp
components/button_driver/include/: button_driver.hpp
components/buzzer/: CMakeLists.txt  buzzer.cpp
components/buzzer/include/: buzzer.hpp
components/display/: CMakeLists.txt  display.cpp
components/display/include/: display.hpp
components/graphics/: CMakeLists.txt
components/graphics/include/: expression.hpp  frame.hpp  vec2i.hpp
components/graphics/src/: expression.cpp  frame.cpp  vec2i.cpp
components/sd_card/: CMakeLists.txt  sd_card.cpp
components/sd_card/include/: sd_card.hpp
components/u8g2-hal-esp-idf/: CMakeLists.txt
devtools/: flash_micro_sd.py  flash_micro_sd.sh  generate_graphics.sh  generate_graphics_structure.py
main/: CMakeLists.txt  main.cpp
pcb/Bobot_2_Amethyst/: BMSBoard.kicad_sch  Bobot_2_Amethyst.kicad_pcb  Bobot_2_Amethyst.kicad_pro  Bobot_2_Amethyst.kicad_sch  ButtonsBoard.kicad_sch  MainBoard.kicad_sch  TouchBoard.kicad_sch
(+6 files in other folders)
